made some functionality

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   flutter_screenutil: ^5.9.3
   font_awesome_flutter: ^10.9.0
   image_picker: ^1.1.2
+  firebase_core: ^4.0.0
+  cloud_firestore: ^6.0.0
+  toastification: ^3.0.3
+  firebase_auth: ^6.0.1
 
 dev_dependencies:
   flutter_test:
